// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubHeader should remove margin when gutterBottom is false 1`] = `
"<Styled(MuiBox) mb={0}>
  <WithStyles(ForwardRef(Typography)) variant=\\"body1\\" component=\\"h2\\" gutterBottom={true}>
    <b>
      mockHeader
    </b>
  </WithStyles(ForwardRef(Typography))>
  <WithStyles(ForwardRef(Typography)) variant=\\"body1\\" gutterBottom={true}>
    mockSubTitle
  </WithStyles(ForwardRef(Typography))>
</Styled(MuiBox)>"
`;

exports[`SubHeader should render a subtitle when provider with one 1`] = `
"<Styled(MuiBox) mb={2}>
  <WithStyles(ForwardRef(Typography)) variant=\\"body1\\" component=\\"h2\\" gutterBottom={true}>
    <b>
      mockHeader
    </b>
  </WithStyles(ForwardRef(Typography))>
  <WithStyles(ForwardRef(Typography)) variant=\\"body1\\" gutterBottom={true}>
    mockSubTitle
  </WithStyles(ForwardRef(Typography))>
</Styled(MuiBox)>"
`;

exports[`SubHeader should render with minimal props 1`] = `
"<Styled(MuiBox) mb={2}>
  <WithStyles(ForwardRef(Typography)) variant=\\"body1\\" component=\\"h2\\" gutterBottom={true}>
    <b>
      mockHeader
    </b>
  </WithStyles(ForwardRef(Typography))>
  <WithStyles(ForwardRef(Typography)) variant=\\"body1\\" gutterBottom={true} />
</Styled(MuiBox)>"
`;

exports[`SubHeader should render with right icon 1`] = `
"<Styled(MuiBox) mb={2}>
  <WithStyles(ForwardRef(Typography)) variant=\\"body1\\" component=\\"h2\\" gutterBottom={true}>
    <b>
      mockHeader
    </b>
  </WithStyles(ForwardRef(Typography))>
  <WithStyles(ForwardRef(Typography)) variant=\\"body1\\" gutterBottom={true} />
</Styled(MuiBox)>"
`;
